<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Add"
        style="@style/Fondo">

    <!-- TODO: Update blank fragment layout -->
    <TextView
            android:text=""
            android:layout_width="297dp"
            android:layout_height="18dp"
            android:textSize="10sp"
            android:textColor="@color/lila"
            android:id="@+id/gmail"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"
            android:gravity="center_horizontal"/>
    <TextView
            android:text=""
            android:layout_width="336dp"
            android:layout_height="48dp"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:id="@+id/dinero"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintVertical_bias="0.044"
            android:gravity="center_horizontal"/>


    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/grupo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.121">

        <RadioButton
                android:text="@string/Earn"
                android:layout_width="77dp"
                android:layout_height="46dp"
                android:id="@+id/in"
                android:textColor="@color/white"
                android:checked="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.266"
                app:layout_constraintVertical_bias="0.116"/>
        <RadioButton
                android:text="@string/TakeOut"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:id="@+id/out"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.717"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.114"/>

    </RadioGroup>
    <Button
            android:text="@string/Doit"
            android:layout_width="137dp"
            android:layout_height="59dp"
            android:id="@+id/doit"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/Boton"
            app:layout_constraintVertical_bias="0.761"/>

    <EditText
            android:layout_width="293dp"
            android:layout_height="67dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/cant"
            android:textSize="30dp"
            style="@style/Inputs"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.286"
            android:hint="@string/amount"
            android:padding="10dp"/>

    <EditText
            android:layout_width="356dp"
            android:layout_height="216dp"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:textSize="20dp"
            android:id="@+id/texto"
            style="@style/Inputs"
            android:hint="@string/description"
            android:padding="10dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintVertical_bias="0.528"/>

</androidx.constraintlayout.widget.ConstraintLayout>